2003-10-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* edit-widget.h (struct WEdit): Add GTree *defines field.
	* syntax.c: Use edit->defines instead of static defines.

2003-10-16  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* syntax.c (compare_word_to_right): More checks for braces and
	brackets.

2003-10-16  Pavel Roskin  <proski@gnu.org>

	* syntax.c (compare_word_to_right): Fix recent breakage - rules
	ending with wildcard (e.g. "$+") won't match.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* edit.h: Make static all functions and variables that don't
	need to be global.  Remove unused functions.  Adjust all
	dependencies.

2003-09-22  Pavel Roskin  <proski@gnu.org>

	* syntax.c: Give names to numeric tokens.

	* syntax.c (compare_word_to_right): Add checks that we don't go
	beyond text length for certain invalid rules.
	Reported by Juan C. Olivares <juancri@TAGnet.org>

2003-09-12  Pavel Roskin  <proski@gnu.org>

	* editcmd.c (edit_raw_key_query): Use straight widget order.
	(edit_completion_dialog): Likewise.
	* editwidget.c (edit): Likewise.

2003-09-07  Pavel Roskin  <proski@gnu.org>

	* edit.h: Get rid of WIDGET_COMMAND, update all dependencies.

2003-07-31  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* edit-widget.h: Resurrect "dir" field in WEdit to store
	directory for relative filenames.

	* edit.c (edit_clean): Release edit->dir.

	* editcmd.c (edit_save_file): Use absolute filename.
	Temporarily disable safe save and backups on remote VFS because
	it doesn't work - again.

2003-07-25  Pavel Roskin  <proski@gnu.org>

	* edit.c (edit_execute_cmd): Enable user menu in mcedit.

2003-07-20  Pavel Roskin  <proski@gnu.org>

	* editcmd.c (edit_quit_cmd): Rename to ...
	(edit_ok_to_exit): ... this.  Don't stop dialog - this function
	is called by the dialog code.
	* editwidget.c (edit_dialog_callback): Process DLG_VALIDATE
	event.  Don't exit it the user wants to continue editing.
	* edit.c (edit_execute_cmd): Close the dialog - it will ask user
	if necessary.
